[gd_scene load_steps=8 format=3 uid="uid://dtsfutbumtxem"]

[ext_resource type="FontFile" uid="uid://cu4lf4od2owng" path="res://Assets/font/FlappyBird.ttf" id="1_37paw"]
[ext_resource type="Script" path="res://Scene/UI.gd" id="1_fawne"]
[ext_resource type="Texture2D" uid="uid://gm8h1jin1vfi" path="res://Assets/upperBg2.png" id="2_6ml1m"]
[ext_resource type="Texture2D" uid="uid://cfngk5p65xvc7" path="res://Assets/blackboard.jpg" id="2_jlf7u"]
[ext_resource type="Texture2D" uid="uid://cwqx4gp2dqb33" path="res://Assets/PianoPanel.png" id="3_1awqb"]
[ext_resource type="Texture2D" uid="uid://x218sp1de1n0" path="res://Assets/gameover.png" id="3_wrxua"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7k0i"]
bg_color = Color(0.94902, 0.564706, 0, 0.568627)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fawne")

[node name="Blackboard3" type="Sprite2D" parent="."]
visible = false
position = Vector2(514.75, 70.25)
scale = Vector2(0.886849, 0.305252)
texture = ExtResource("2_6ml1m")

[node name="Blackboard" type="Sprite2D" parent="."]
position = Vector2(515.687, 74.75)
scale = Vector2(0.457017, 0.506309)
texture = ExtResource("3_1awqb")

[node name="Blackboard2" type="Sprite2D" parent="."]
visible = false
position = Vector2(513, 71.125)
scale = Vector2(0.814844, 0.175557)
texture = ExtResource("2_jlf7u")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 32

[node name="PointsLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_37paw")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOverBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_wrxua")

[node name="Panel" type="Panel" parent="MarginContainer/GameOverBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_l7k0i")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GameOverBox/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -20.0
offset_right = 32.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="MarginContainer/GameOverBox/Panel/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_37paw")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="Button" type="Button" parent="."]
offset_left = 12.0
offset_top = 8.0
offset_right = 69.0
offset_bottom = 42.0
text = "Pause"

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PauseMenuLabel" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Pause Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeGameButton" type="Button" parent="Content"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="OptionsButton" type="Button" parent="Content"]
process_mode = 3
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="BackToMenuButton" type="Button" parent="Content"]
process_mode = 3
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Back to Main Menu"

[node name="QuitButton" type="Button" parent="Content"]
process_mode = 3
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Label" type="Label" parent="."]
offset_left = 631.0
offset_top = 96.0
offset_right = 973.0
offset_bottom = 140.0

[connection signal="pressed" from="MarginContainer/GameOverBox/Panel/MarginContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Content/ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="Content/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Content/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="Content/QuitButton" to="." method="_on_quit_button_pressed"]
